# mip

./: .gitignore  README.md  data.json  main.py  model_train.ipynb  new.py  pages.toml  predicted2_data.json  predicted_data.json  pyproject.toml  streamlit_app.py  trial.py
.streamlit/: secrets.toml
dumped_stuff/assets/: hehe.csv  insurance_new.csv
dumped_stuff/model/: model2.ipynb  model_train.ipynb  model_train.py
dumped_stuff/src/: api.py  app2.html  index.html  main.py  modelling.py  test.py  trial.py
model/: model_train.ipynb  rf_model.pkl
pages/: about.py  app2.py  dashboard.py  home.py  login.py  success.py
src/: main.py
