[tool.poetry]
name = "mip"
version = "0.1.0"
description = ""
authors = ["AddonayOsoro <oaddonay@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
polars = "^1.7.1"
numpy = "^2.1.1"
scikit-learn = "^1.5.2"
streamlit = "^1.38.0"
jupyter = "^1.1.1"
nbconvert = "^7.16.4"
streamlit-shadcn-ui = "^0.1.18"
seaborn = "^0.13.2"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
