[project]
name = "mip"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.14",
    "ipykernel>=6.29.5",
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "polars>=1.31.0",
    "scikit-learn>=1.7.0",
    "seaborn>=0.13.2",
    "st-pages>=1.0.1",
    "streamlit>=1.46.1",
    "streamlit-echarts>=0.4.0",
    "streamlit-shadcn-ui>=0.1.18",
    "uvicorn>=0.35.0",
]
